[gd_scene load_steps=8 format=3 uid="uid://chre08rue8e1h"]

[ext_resource type="Script" path="res://Screens/local_play_screen.gd" id="1_32sly"]
[ext_resource type="PackedScene" uid="uid://bgchxlyd8a4y2" path="res://Scenes/stage_loader.tscn" id="1_kx1ns"]
[ext_resource type="Script" path="res://Scenes/Camera.gd" id="2_avw6x"]
[ext_resource type="Texture2D" uid="uid://dtnn2fe247ddx" path="res://Assets/Background.png" id="3_l4bpp"]
[ext_resource type="PackedScene" uid="uid://behco8lyoffkn" path="res://Scenes/player.tscn" id="3_lba8f"]
[ext_resource type="PackedScene" uid="uid://2m3xx3wjvjw4" path="res://Scenes/recipe_indicator.tscn" id="4_mtekd"]
[ext_resource type="PackedScene" uid="uid://bdo8vi8f3apoo" path="res://Scenes/recipe_handler.tscn" id="5_2s7md"]

[node name="LocalPlay" type="Node2D"]
script = ExtResource("1_32sly")

[node name="StageLoader" parent="." instance=ExtResource("1_kx1ns")]

[node name="PlayerContainer" type="Node2D" parent="."]
z_as_relative = false
y_sort_enabled = true

[node name="Blue" parent="PlayerContainer" instance=ExtResource("3_lba8f")]

[node name="Red" parent="PlayerContainer" instance=ExtResource("3_lba8f")]
player_color = "red"

[node name="Camera" type="Camera2D" parent="."]
z_index = 4092
z_as_relative = false
position = Vector2(960, 320)
zoom = Vector2(0.906, 0.906)
script = ExtResource("2_avw6x")

[node name="TextureRect" type="TextureRect" parent="Camera"]
z_index = -2000
z_as_relative = false
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_l4bpp")

[node name="Recipes" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -77.0
offset_right = 1920.0
offset_bottom = 1003.0
grow_horizontal = 2
grow_vertical = 2

[node name="RecipeIndicator" parent="Recipes" instance=ExtResource("4_mtekd")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 800.0
offset_bottom = 250.0
grow_horizontal = 1
grow_vertical = 1

[node name="RecipeIndicator2" parent="Recipes" instance=ExtResource("4_mtekd")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1120.0
offset_top = 0.0
offset_right = 1920.0
offset_bottom = 250.0
grow_horizontal = 1
grow_vertical = 1
chomp_direction = -1

[node name="RecipeHandler" parent="." instance=ExtResource("5_2s7md")]

[node name="round_start_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="round_start_timer" to="." method="_on_round_start_timer_timeout"]
